Still working on fixing the backend server

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,27 +4,33 @@
     "description": "Backend for the Dynamic Generator Platform",
     "main": "src/server.js",
     "scripts": {
-      "start": "node src/server.js",
-      "dev": "nodemon src/server.js",
-      "test": "jest",
-      "seed": "node src/seeds/seed.js"
+        "start": "node src/server.js",
+        "dev": "nodemon src/server.js",
+        "test": "jest",
+        "seed": "node src/seeds/seed.js"
     },
     "dependencies": {
-      "@sentry/node": "^6.13.3",
-      "axios": "^0.24.0",
-      "bcrypt": "^5.0.1",
-      "cors": "^2.8.5",
-      "dotenv": "^10.0.0",
-      "express": "^4.17.1",
-      "express-rate-limit": "^5.5.0",
-      "helmet": "^4.6.0",
-      "joi": "^17.4.2",
-      "jsonwebtoken": "^8.5.1",
-      "pg": "^8.7.1",
-      "winston": "^3.3.3"
+        "@sentry/integrations": "^7.114.0",
+        "@sentry/node": "^6.19.7",
+        "@sentry/profiling-node": "^8.13.0",
+        "axios": "^0.24.0",
+        "bcrypt": "^5.0.1",
+        "cors": "^2.8.5",
+        "csurf": "^1.11.0",
+        "dompurify": "^3.1.5",
+        "dotenv": "^10.0.0",
+        "express": "^4.17.1",
+        "express-rate-limit": "^5.5.0",
+        "express-validator": "^7.1.0",
+        "helmet": "^4.6.0",
+        "joi": "^17.4.2",
+        "jsonwebtoken": "^8.5.1",
+        "openai": "^4.52.2",
+        "pg": "^8.7.1",
+        "winston": "^3.3.3"
     },
     "devDependencies": {
-      "jest": "^27.3.1",
-      "nodemon": "^2.0.14"
+        "jest": "^27.3.1",
+        "nodemon": "^2.0.14"
     }
-  }
+}
